Fixed mainBody div overlap

--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ body
   top: 14vh;
   transform: translate(-50%);
   justify-content: center;
-  width: 100vw;
+  width: 60vw;
 }
 #sectHeader
 {
